--- a/1.4/Source/RaidMaxPawnNumSettings/RaidMaxPawnNumSettings.csproj
+++ b/1.4/Source/RaidMaxPawnNumSettings/RaidMaxPawnNumSettings.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CompressedRaid</RootNamespace>
     <AssemblyName>CompressedRaid</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
